# agent-skeleton

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.ja.md  README.md  config.example.toml  main.py  pyproject.toml
agent/: agent.py  config.py  executor.py  llm.py  log.py  memory.py  planner.py  security.py
agent/mcp/: __init__.py  client.py
agent/tools/: __init__.py  base.py  file_tool.py  shell_tool.py  web_tool.py
cli/: app.py
demo/: attack.md  procedure.md
docs/: architecture.ja.md  architecture.md  demo-prompt-injection.ja.md  demo-prompt-injection.md
tests/: test_config.py  test_executor.py  test_file_tool.py  test_llm.py  test_memory.py  test_planner.py  test_security.py  test_shell_tool.py
