[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-skeleton"
version = "0.1.19"
description = "Autonomous agent skeleton: plan → approve → execute with built-in tools and MCP support"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.0",
    "mcp>=1.0",
    "rich>=13.0",
    "ddgs>=9.13.0",
    "prompt-toolkit>=3.0.52",
]

[project.scripts]
agent-skeleton = "cli.app:run"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["agent", "cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
